--- a/01-10-project/src/index.html
+++ b/01-10-project/src/index.html
@@ -2,10 +2,9 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>首页</title>
+  <title>Title</title>
 </head>
 <body>
-<div id="mainContainer"></div>
-<script src="../bundle.js"></script>
+  <div id="example"></div>
 </body>
 </html>
