--- a/01-10-project/src/index.html
+++ b/01-10-project/src/index.html
@@ -5,7 +5,6 @@
   <title>Title</title>
 </head>
 <body>
-  <div id="title"></div>
-  <div id="tupian"></div>
+  <div id="example"></div>
 </body>
 </html>
