--- a/01-10-project/src/index.html
+++ b/01-10-project/src/index.html
@@ -1,10 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>Title</title>
-</head>
-<body>
-  <div id="example"></div>
-</body>
-</html>
+<!DOCTYPE html><html lang=en><head>  <meta charset=UTF-8>  <title>Title</title></head><body>  <div id=example></div><script type=text/javascript src=js/jquery.min.js?4521753a5271f89c6ab5></script><script type=text/javascript src=bundle.js?4521753a5271f89c6ab5></script></body></html>
